tests/fixtures/invalid/invalid_default_type.avsc
{
  "type": "record",
  "name": "TestRecord",
  "fields": [
    {"name": "id", "type": "int", "default": "not a number"},
    {"name": "name", "type": "string"}
  ]
}
